# wanikanji

./: .gitattributes  Cargo.toml  README.md  wanikanji.toml
res/: anki.css  kanji-card-back.html  kanji-card-front.html  vocabulary-card-back.html  vocabulary-card-front.html
src/: anki.rs  app.rs  io.rs  kanji.rs  main.rs  query.rs  vocabulary.rs
src/anki_connect/: client.rs  rpc.rs
