[package]
name = "wanikanji"
version = "0.1.0"
edition = "2021"

[dependencies]
anki_bridge = { version = "0.8.0", features = ["reqwest_async"] }
anyhow = "1.0.89"
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
