[package]
name = "wanikanji"
version = "0.1.0"
edition = "2021"

[dependencies]
again = "0.1.2"
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
